fix alignment

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -31,6 +31,5 @@ main.container {
   margin-left: 5%;
   margin-right: 5%;
   text-align: center;
-  display: flex;
 } 
 
